<resources>
    <string name="app_name">WeatherApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_dashboard">Dashboard</string>
    <string name="nav_measurements">Measurements</string>
    <string name="nav_forecast">Forecast</string>
    <string name="action_settings">Settings</string>
    <string name="nav_set_as_home">Set Current Location as Home</string>
    <string name="nav_settings">Settings</string>

    <string name="pref_cat_measurement_db">Database</string>
    <string name="pref_title_db_url">URL</string>
    <string name="pref_title_db_user">User Name</string>
    <string name="pref_title_db_pw">Password</string>

    <string name="menu_show_home">Show Home Location</string>
    <string name="menu_show_gps">Show Current Location</string>

    <string name="error_retrieving_measurements">Retrieving Measurements Failed</string>
    <string name="error_retrieving_location">Retrieving Location Failed</string>
    <string name="error_retrieving_forecast">Retrieving Forecast Failed</string>
    <string name="error_no_data">No Data Available</string>

    <string name="home">Home</string>

    <string name="title_measurements">Measurements</string>
    <string name="title_forecast">10 Day Forecast</string>
    <string name="title_day_forecast">Day Forecast</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>

</resources>
