<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/nav_dashboard"
            android:checked="true" />
        <item
            android:id="@+id/nav_measurements"
            android:icon="@drawable/ic_chart"
            android:title="@string/nav_measurements" />
        <item
            android:id="@+id/nav_forecast"
            android:icon="@drawable/ic_sunny"
            android:title="@string/nav_forecast" />
    </group>

    <item
        android:enabled="false"
        android:title="@string/action_settings">
        <menu>
            <item
                android:id="@+id/nav_set_as_home"
                android:icon="@drawable/ic_menu_home"
                android:title="@string/nav_set_as_home" />
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/nav_settings" />
        </menu>
    </item>

</menu>
